objects/Sales_Coach_Section_Item__c.object
<CustomObject><fields>
        <fullName>Display__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Item_Name__c</fullName>
        <label>Item Name</label>
        <length>250</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Link_to_Content__c</fullName>
        <label>Link to Content</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Sales_Coach_Section__c</fullName>
        <label>Sales Coach Section</label>
        <referenceTo>Sales_Coach_Section__c</referenceTo>
        <relationshipLabel>Sales Coach Section Items</relationshipLabel>
        <relationshipName>Sales_Coach_Section_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Section_Ordering__c</fullName>
        <label>Section Ordering</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Sales Coach Section Item</label><nameField>
        <displayFormat>SCSI-{0000}</displayFormat>
        <label>Sales Coach Section Item Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Sales Coach Section Items</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>